codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__pending_input_preview__tests__render_huge_multiline_input.snap
---
source: tui/src/bottom_pane/pending_input_preview.rs
expression: "format!(\"{buf:?}\")"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 40, height: 3 },
    content: [
        "• 1 queued · ⌥ + ↑ edit latest queued   ",
        "  Latest: line 1                        ",
        "    … +19 hidden lines                  ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 2, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 10, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 13, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 18, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 37, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 10, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 22, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
