codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__pending_input_preview__tests__render_one_pending_steer_with_remapped_interrupt_binding.snap
---
source: tui/src/bottom_pane/pending_input_preview.rs
expression: "format!(\"{buf:?}\")"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 48, height: 2 },
    content: [
        "• 1 steer · f12 send steers                     ",
        "  ↳ Steer: Please continue.                     ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 2, y: 0, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 27, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 27, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
