codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__pending_input_preview__tests__render_responsive_mixed_input_matrix.snap
---
source: tui/src/bottom_pane/pending_input_preview.rs
expression: snapshots
---
24 columns
Buffer {
    area: Rect { x: 0, y: 0, width: 24, height: 7 },
    content: [
        "• 5 pending inputs      ",
        "  ! Retry: Retry this   ",
        "    … +3 hidden lines   ",
        "  ↳ Steer: Inspect the  ",
        "    … +3 hidden lines   ",
        "… 3 hidden · esc steers ",
        "    ⌥ + ↑ edit queue    ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 2, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Red, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 21, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 21, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 3, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 22, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 21, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 13, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 16, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 23, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 4, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 9, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 20, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}

40 columns
Buffer {
    area: Rect { x: 0, y: 0, width: 40, height: 7 },
    content: [
        "• 5 pending inputs                      ",
        "  ! Retry: Retry this required direction",
        "           first.                       ",
        "  ↳ Steer: Inspect the current result   ",
        "           before continuing.           ",
        "… 3 hidden · esc steers                 ",
        "    ⌥ + ↑ edit queue                    ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 2, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Red, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 0, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 17, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 3, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 37, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 29, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 13, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 16, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 23, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 4, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 9, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 20, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}

80 columns
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 7 },
    content: [
        "• 1 retry · 1 steer · 3 queued                                                  ",
        "  ! Retry: Retry this required direction first.                                 ",
        "  ↳ Steer: Inspect the current result before continuing.                        ",
        "  Latest: https://example.test/releases/2026/artifacts/very-long-report-name    ",
        "        · Unicode remains whole: 👩🏽‍💻 café 漢字.                                  ", // hidden by multi-width symbols: [(34, " "), (42, " "), (44, " ")]
        "        · First queued follow-up stays first.                                   ",
        "  esc steers · ⌥ + ↑ edit latest queued                                         ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 2, y: 0, fg: Red, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 12, y: 0, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 19, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 22, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Red, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 47, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 2, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 56, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 10, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 10, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 10, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 5, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 15, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 20, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 39, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}

120 columns
Buffer {
    area: Rect { x: 0, y: 0, width: 120, height: 7 },
    content: [
        "• 1 retry · 1 steer · 3 queued                                                                                          ",
        "  ! Retry: Retry this required direction first.                                                                         ",
        "  ↳ Steer: Inspect the current result before continuing.                                                                ",
        "  Latest: https://example.test/releases/2026/artifacts/very-long-report-name                                            ",
        "        · Unicode remains whole: 👩🏽‍💻 café 漢字.                                                                          ", // hidden by multi-width symbols: [(34, " "), (42, " "), (44, " ")]
        "        · First queued follow-up stays first.                                                                           ",
        "  esc steers · ⌥ + ↑ edit latest queued                                                                                 ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 2, y: 0, fg: Red, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 12, y: 0, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 19, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 22, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Red, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 47, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 2, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 56, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 10, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 10, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 10, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 5, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 15, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 20, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 39, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
