codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__pending_input_preview__tests__render_two_messages.snap
---
source: tui/src/bottom_pane/pending_input_preview.rs
expression: "format!(\"{buf:?}\")"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 40, height: 2 },
    content: [
        "  Latest: This is another message       ",
        "… 1 older queued · ⌥ + ↑ edit queue     ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 10, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 19, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 24, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 35, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
